PSFR-1604: fix spacing in report (#385)

--- a/assets/scss/local.scss
+++ b/assets/scss/local.scss
@@ -3,7 +3,6 @@
   background: transparent;
   border: none;
   appearance: none;
-  font: inherit;
   cursor: pointer;
 
   &:hover {
